# ergopti

./: .cpanel-ci.js  .gitattributes  .gitignore  .prettierrc  CLAUDE.md  CNAME  CONTRIBUTING.md  LICENSE  LLM_INSTRUCTIONS.md  README.md  benchmarks.html  benchmarks.html.br  donnees_triees.json  ergopti-plus.html  ergopti-plus.html.br  favicon.svg.br  index.html  index.html.br  informations.html  informations.html.br  log.txt  package-lock.json  package.json  pyproject.toml  remove_ahk_personal_configuration.js  svelte.config.js  utilisation.html  utilisation.html.br  version.json.br  vite.config.js
static/drivers/hammerspoon/: README.md  error.txt  generate_hotstrings_lua.py  gestures.lua  init.lua  keymap.lua  menu.lua  personal_info_config.lua  pyproject.toml  repeat_keys.lua  script_control.lua  scroll.lua  shortcuts.lua  toml_reader.lua  utils.lua
static/drivers/hammerspoon/data/: generate_models.py  llm_models.json  llm_models_v0.json
static/drivers/hammerspoon/generated_hotstrings/: _descriptions.lua  accents.lua  brands.lua  emojis.lua  errors.lua  magic.lua  minus.lua  names.lua  plus_apostrophe.lua  plus_comma.lua  plus_e_deadkey.lua  plus_qu.lua  plus_rolls.lua  plus_sfb_reduction.lua  plus_suffixes.lua  punctuation.lua  sfb_reduction.lua  symbols.lua  symbols_typst.lua
static/drivers/hammerspoon/lib/: app_picker.lua  color_utils.lua  dialog_util.lua  keycodes.lua  keymap_utils.lua  layout.lua  logger.lua  mlx_deps_checker.lua  notifications.lua  ollama_deps_checker.lua  perf.lua  text_utils.lua  toml_reader.lua  toml_writer.lua  ui.lua  ui_builder.lua  ui_restore.lua  utils.lua  vscode_bridge.lua
static/drivers/hammerspoon/modules/: dynamic_hotstrings.lua  gestures.lua  keylogger.lua  keymap.lua  llm.lua  menu.lua  personal_info.lua  script_control.lua  scroll.lua  shortcuts.lua
static/drivers/hammerspoon/modules/dynamic_hotstrings/: init.lua  personal_info.lua  rules_engine.lua
static/drivers/hammerspoon/modules/gestures/: actions.lua  conflicts.lua  engine.lua  init.lua
static/drivers/hammerspoon/modules/karabiner/: config.lua  defaults.lua  generator.lua  init.lua  ke_lifecycle.lua  watchers.lua
static/drivers/hammerspoon/modules/keylogger/: context_tracker.lua  init.lua  kc_bridge.lua  log_manager.lua
static/drivers/hammerspoon/modules/keymap/: expander.lua  init.lua  llm_bridge.lua  registry.lua  state.lua  terminators.lua  utils.lua
static/drivers/hammerspoon/modules/llm/: api.lua  api_common.lua  api_mlx.lua  api_ollama.lua  backend_detector.lua  ensure-mlx-deps.sh  ensure-ollama-deps.sh  init.lua  parser.lua  prediction_engine.lua  profiles.lua
static/drivers/hammerspoon/modules/shortcuts/: bindings.lua  helpers.lua  init.lua  script_control.lua
static/drivers/hammerspoon/tests/: test_parser.lua
static/drivers/hammerspoon/ui/: download_window.lua  hotstring_editor.lua  menu.lua  menu_llm.lua  prompt_editor.lua  tooltip.lua  ui_builder.lua
static/drivers/hammerspoon/ui/download_window/: index.html  (+3 more)
(+2130 files in other folders)
